--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,9 +33,10 @@ body {
 /* margin */
 .mg-0{margin: 0 !important;}
 
+.mt-20{margin-top: 20px;}
+
 /* padding */
 .pt-10{padding-top: 10px;}
-
 .ps-20{padding: 0 20px;}
 .p-20{padding: 20px;}
 
