--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,8 +130,8 @@ body {
 
 .mini-article-byline {
     margin: 3rem 0 0;
-    display: grid;
-    grid-template-columns: 75px 1fr;
+    /* display: grid;
+    grid-template-columns: 75px 1fr; */
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
