--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -244,14 +244,14 @@ time {
     top:0; left:0; 
     display:none;
     z-index: 99999999;
-    
 }
 
 .proj-modal-content {
     width: 70vw; height:85vh;
     background:#17141d;
-    position:relative;  top:40%; left:50%;
-    transform: translate(-50%, -50%);
+    /* position:relative;   */
+    /* top:40%; left:50%; */
+    /* transform: translate(-50%, -50%); */
     text-align:center; border-radius: 10px;
     box-sizing:border-box;
     line-height:23px; cursor:pointer;
